Fix Shipping page on iPhone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1511,6 +1511,8 @@ html.dark {
 }
 
 .header {
+  position: relative;
+  z-index: 2;
   background: var(--header-bg-color);
 }
 @media (max-width: 991.98px) {
@@ -2822,7 +2824,7 @@ html.dark {
   }
 }
 .form__dialog-heading {
-  padding: 14px;
+  padding: 20px;
   font-size: 1.8rem;
   font-weight: 500;
   text-align: center;
@@ -2832,7 +2834,7 @@ html.dark {
   position: absolute;
   right: 0;
   top: 0;
-  padding: 2px 18px;
+  padding: 8px 18px;
   opacity: 0.8;
 }
 .form__search {
@@ -2845,7 +2847,7 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__search {
-    height: 42px;
+    height: 48px;
   }
 }
 @media (max-width: 575.98px) {
@@ -2853,7 +2855,7 @@ html.dark {
     padding: 0 14px;
     border-radius: 10px;
     border: 1px solid #d2d1d6;
-    margin: 10px 20px 0;
+    margin: 10px 30px 0;
   }
 }
 .form__search-input {
@@ -2865,11 +2867,21 @@ html.dark {
   width: 16px;
   margin-left: 10px;
 }
+@media (max-width: 991.98px) {
+  .form__search-icon {
+    width: 20px;
+  }
+}
 .form__options-list {
   margin-top: 10px;
   flex: 1;
   overflow-y: auto;
   overscroll-behavior: contain;
+}
+@supports (-webkit-touch-callout: none) {
+  .form__options-list {
+    padding-bottom: 300px;
+  }
 }
 .form__option {
   padding: 8px 20px;
@@ -2885,7 +2897,8 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .form__option {
-    padding: 14px 20px;
+    padding: 18px 30px;
+    font-size: 1.6rem;
   }
 }
 .form__error {
@@ -3067,7 +3080,7 @@ html.dark {
   height: 100%;
   padding-left: 15px;
   font-weight: 500;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   line-height: 142.857%;
 }
 .search-bar__input::placeholder {
