--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -10,7 +10,7 @@
     height: 100%;
     padding-left: 15px;
     font-weight: 500;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     line-height: 142.857%;
 
     &::placeholder {
